Login & register components

--- a/water-it/src/app/components/home/home.component.css
+++ b/water-it/src/app/components/home/home.component.css
@@ -89,7 +89,7 @@ button.register-button, button.contact-button {
     display: flex;
     justify-content: space-around;
     align-items: center;
-    background-color: #088D0E;
+    background-color: #10C75B;
     height: 3vh;
     width: 10vh;
     border-color: transparent;
