--- a/water-it/src/app/components/navbar/navbar.component.html
+++ b/water-it/src/app/components/navbar/navbar.component.html
@@ -6,13 +6,13 @@
         <div class="nav-menu-buttons">
             <div class="nav-button" routerLink="">Home</div>
             <div class="nav-button" routerLink="contact">Contact</div>
-            <div class="nav-button" routerLink="register">Client panel</div>
+            <div class="nav-button">Client panel</div>
         </div>
     </div>
     <div class="right-section">
         <button class="social-media-button facebook-button"><i class="fa fa-facebook socials"></i></button>
         <button class="social-media-button ig-button"><i class="fa fa-instagram socials"></i></button>
         <button class="logout-button" routerLink="login">Log In</button>
-        <button class="logout-button">Register</button>
+        <button class="logout-button" routerLink="register">Register</button>
     </div>
 </div>
