--- a/water-it/src/app/components/register/register.component.html
+++ b/water-it/src/app/components/register/register.component.html
@@ -1,1 +1,25 @@
-<p>register works!</p>
+<div class="register-panel-content">
+    <div class="register-form-container">
+        <div class="logo-container">
+            <img src="../../../assets/Logo/logo.jpg" alt="" class="logo">
+        </div>
+        <div class="register-form-only">
+            <form [formGroup]="registerForm" class="register-form">
+                <input type="text" class="register-fields" placeholder="Name" formControlName="name">
+                
+                <input type="text" class="register-fields" placeholder="Surname" formControlName="surname">
+                
+                <input type="text" class="register-fields" placeholder="E-mail" formControlName="email">
+                
+                <input type="password" class="register-fields" placeholder="Password" formControlName="password">
+                
+                <input type="password" class="register-fields" placeholder="Repeat password" formControlName="repeatPassword">
+            </form>
+        </div>
+        <p class="dont-have-acc">Already have an Account?<span class="collored-words" (click)="LogInButtonClick()">Log In</span> now!</p>
+        <div class="buttons-container">
+            <button class="log-ip-button" (click)="LogInButtonClick()">Log In</button>
+            <button class="sign-up-button" (click)="SignUpButtonClick()">Sign Up</button>
+        </div>
+    </div>
+</div>
