--- a/water-it/src/app/components/login/login.component.html
+++ b/water-it/src/app/components/login/login.component.html
@@ -1,1 +1,16 @@
-<p>login works!</p>
+<div class="login-panel-content">
+    <div class="login-form-container">
+        <div class="logo-container">
+            <img src="../../../assets/Logo/logo.jpg" alt="" class="logo">
+        </div>
+        <form [formGroup]="loginForm" class="login-form" (ngSubmit)="onSubmit()">
+            <input type="text" class="login-fields" placeholder="Login" formControlName="username">
+            <input type="password" class="login-fields" placeholder="Password" formControlName="password">
+        </form>
+        <p class="dont-have-acc">Do not have an Account?<span class="collored-words" (click)="signUpButtonClick()">Sign Up</span> now!</p>
+        <div class="buttons-container">
+            <button class="sign-up-button" (click)="signUpButtonClick()">Sign Up</button>
+            <button class="log-in-button" (click)="onSubmit()">Log In</button>
+        </div>
+    </div>
+</div>
