--- a/water-it/src/app/components/home/home.component.css
+++ b/water-it/src/app/components/home/home.component.css
@@ -102,7 +102,7 @@ button.register-button, button.contact-button {
 
 button.register-button:hover {
     cursor: pointer;
-    background-color: #8CB7D9;
+    background-color: #33B9DE;
 }
 
 p.info-content {
