--- a/water-it/src/app/components/dashboardComponents/weather-forecast/weather-forecast.component.css
+++ b/water-it/src/app/components/dashboardComponents/weather-forecast/weather-forecast.component.css
@@ -6,7 +6,7 @@ div.weather-section-container {
 
 div.current-weather-container{
     width: 100%;
-    height: 78%;
+    height: 80%;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -17,20 +17,34 @@ img.current-weather-icon {
     margin-top: 10%;
 }
 
+div.additional-info {
+    border-top: 1px solid lightgray;
+    height: 100%;
+    width: 90%;
+    margin-top: 2vh;
+    padding-top: 2vh;
+}
+
 div.weather-forecast-container {
     display: flex;
     justify-content: space-evenly;
 }
 
 div.weather-day-forecast {
-    background-color: rebeccapurple;
-    width: 15%;
+    width: 2.5vw;
+    height: 8vh;
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
     padding: 1%;
     background-color: lightgrey;
     border-radius: 10px;
+    transition: 1s;
+}
+
+div.weather-day-forecast:hover{
+    background-color: lightblue;
 }
 
 img.forecast-weather-icon {
@@ -39,5 +53,39 @@ img.forecast-weather-icon {
 
 p.current-weather-temp {
     font-size: 7vh;
+    margin-top: 3vh;
+    color: grey;
+}
+
+p.forecast-weather-temp {
+    font-size: 1.5vh;
     margin: 0;
+}
+
+.additional-info-row {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    margin-bottom: 2vh;
+}
+
+.water-icon {
+    color: #33B9DE;
+    font-size: 3vh;
+    height: 3vh;
+    width: 3vh;
+}
+
+.additional-info-label {
+    margin: 0;
+    font-size: 2vh;
+    color: gray;
+}
+
+.data-column {
+    display: flex;
+    align-items: center;
+    width: 30%;
+    justify-content: flex-start;
+    margin-right: 1vw;
 }
