--- a/water-it/src/app/components/dashboardComponents/dashboard-page/dashboard-page.component.html
+++ b/water-it/src/app/components/dashboardComponents/dashboard-page/dashboard-page.component.html
@@ -11,13 +11,9 @@
                 <div class="weather-forecast-componet-container">
                     <app-weather-forecast></app-weather-forecast>
                 </div>
-                <!-- Example of apx-chart usage -->
-                <apx-chart
-                    [series]="chartOptions.series"
-                    [chart]="chartOptions.chart"
-                    [xaxis]="chartOptions.xaxis"
-                    [title]="chartOptions.title">
-                </apx-chart>
+                <div class="humidity-preview-component-container">
+                    <app-humidity-preview></app-humidity-preview>
+                </div>
             </div>
         </div>
     </div>
