--- a/water-it/src/app/components/dashboardComponents/weather-forecast/weather-forecast.component.html
+++ b/water-it/src/app/components/dashboardComponents/weather-forecast/weather-forecast.component.html
@@ -3,6 +3,7 @@
         <div class="basic-info"></div>
         <img class="current-weather-icon" [src]="weather.current.condition.icon" alt="">
         <p class="current-weather-temp">{{weather.current.temp_c | temp}}</p>
+        <p class="current-weather-city">{{city}}</p>
         <div class="additional-info">
             <div class="additional-info-row">
                 <div class="data-column">
