--- a/water-it/src/app/components/dashboardComponents/dashboard-page/dashboard-page.component.css
+++ b/water-it/src/app/components/dashboardComponents/dashboard-page/dashboard-page.component.css
@@ -33,7 +33,7 @@ div.dashboard-container {
     width: 100vw;
 }
 
-div.humidity-preview-component-container{
+div.sensor-preview-component-container {
     width: 18vw;
     height: 18vw;
     background-color: white;
@@ -42,4 +42,24 @@ div.humidity-preview-component-container{
     align-items: center;
     border-radius: 20px;
     overflow: hidden;
+}
+
+div.left-section {
+    height: 100%;
+    width: 30%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+div.right-section {
+    height: 100%;
+    width: 70%;
+}
+
+div.right-section-row {
+    display: flex;
+    height: 50%;
+    justify-content: space-evenly;
+    align-items: center;
 }
