--- a/water-it/src/app/components/dashboardComponents/dashboard-page/dashboard-page.component.html
+++ b/water-it/src/app/components/dashboardComponents/dashboard-page/dashboard-page.component.html
@@ -27,10 +27,10 @@
                     </div>
                     <div class="right-section-row">
                         <div class="sensor-preview-component-container">
-                            <app-humidity-preview></app-humidity-preview>
+                            <app-air-polution-preview></app-air-polution-preview>
                         </div>
                         <div class="sensor-preview-component-container">
-                            <app-soli-moisture-preview></app-soli-moisture-preview>
+                            <app-temperature-preview></app-temperature-preview>
                         </div>
                         <div class="sensor-preview-component-container">
                             <app-lux-preview></app-lux-preview>
