--- a/water-it/src/app/components/dashboardComponents/sensors-preview-components/rain-preview/rain-preview.component.html
+++ b/water-it/src/app/components/dashboardComponents/sensors-preview-components/rain-preview/rain-preview.component.html
@@ -1,1 +1,9 @@
-<p>rain-preview works!</p>
+<div class="rain-preview-chart-container">
+    <apx-chart
+        [series]="chartOptions.series"
+        [chart]="chartOptions.chart"
+        [plotOptions]="chartOptions.plotOptions"
+        [labels]="chartOptions.labels"
+        [fill]="chartOptions.fill">
+    </apx-chart>
+</div>
