--- a/water-it/src/app/components/dashboardComponents/sensors-preview-components/temperature-preview/temperature-preview.component.html
+++ b/water-it/src/app/components/dashboardComponents/sensors-preview-components/temperature-preview/temperature-preview.component.html
@@ -1,1 +1,4 @@
-<p>temperature-preview works!</p>
+<div class="temperature-preview-chart-container">
+    <p class="temperature-value">{{temperature | temp}}</p>
+    <p class="temperature-label">Real Temperature</p>
+</div>
