--- a/water-it/src/app/components/dashboardComponents/sensors-preview-components/air-polution-preview/air-polution-preview.component.html
+++ b/water-it/src/app/components/dashboardComponents/sensors-preview-components/air-polution-preview/air-polution-preview.component.html
@@ -1,1 +1,9 @@
-<p>air-polution-preview works!</p>
+<div class="air-polution-preview-chart-container">
+    <apx-chart
+        [series]="chartOptions.series"
+        [chart]="chartOptions.chart"
+        [plotOptions]="chartOptions.plotOptions"
+        [labels]="chartOptions.labels"
+        [fill]="chartOptions.fill">
+    </apx-chart>
+</div>
