--- a/water-it/src/app/components/dashboardComponents/sensors-preview-components/temperature-preview/temperature-preview.component.html
+++ b/water-it/src/app/components/dashboardComponents/sensors-preview-components/temperature-preview/temperature-preview.component.html
@@ -1,4 +1,4 @@
 <div class="temperature-preview-chart-container">
-    <p class="temperature-value">{{temperature | temp}}</p>
+    <p class="temperature-value">{{ data?.temperature | temp}}</p>
     <p class="temperature-label">Real Temperature</p>
 </div>
