--- a/water-it/src/app/components/register/register.component.html
+++ b/water-it/src/app/components/register/register.component.html
@@ -5,11 +5,7 @@
         </div>
         <div class="register-form-only">
             <form [formGroup]="registerForm" class="register-form">
-                <input type="text" class="register-fields" placeholder="Name" formControlName="name">
-                
-                <input type="text" class="register-fields" placeholder="Surname" formControlName="surname">
-                
-                <input type="text" class="register-fields" placeholder="E-mail" formControlName="email">
+                <input type="text" class="register-fields" placeholder="Username" formControlName="username">
                 
                 <input type="password" class="register-fields" placeholder="Password" formControlName="password">
                 
