--- a/water-it/src/app/components/dashboard-components/dashboard-page/dashboard-page.component.html
+++ b/water-it/src/app/components/dashboard-components/dashboard-page/dashboard-page.component.html
@@ -1,11 +1,4 @@
-<div class="dashboard-page">
-    <div class="top-navbar">
-        <app-top-navbar></app-top-navbar>
-    </div>
-    <div class="dashboard-container">
-        <div class="navbar">
-            <app-side-navbar></app-side-navbar>
-        </div>
+
         <div class="dashboard-content-container">
             <div class="dashboard-content">
                 <div class="left-section">
@@ -33,11 +26,9 @@
                             <app-temperature-preview [data]="measurments$ | async"></app-temperature-preview>
                         </div>
                         <div class="sensor-preview-component-container">
-                            <app-lux-preview [data]="measurments$ | async"></app-lux-preview>
+                            <app-rain-preview [data]="measurments$ | async"></app-rain-preview>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
-</div>
