--- a/water-it/src/app/components/dashboard-components/dashboard-page/dashboard-page.component.html
+++ b/water-it/src/app/components/dashboard-components/dashboard-page/dashboard-page.component.html
@@ -5,6 +5,9 @@
                     <div class="weather-forecast-componet-container">
                         <app-weather-forecast></app-weather-forecast>
                     </div>
+                    <div class="prediction-component-container">
+                        <app-water-requirement-prediction></app-water-requirement-prediction>
+                    </div>
                 </div>
                 <div class="right-section">
                     <div class="right-section-row">
