--- a/water-it/src/app/components/management-components/side-navbar/side-navbar.component.html
+++ b/water-it/src/app/components/management-components/side-navbar/side-navbar.component.html
@@ -1,5 +1,5 @@
 <div class="side-bar">
-    <mat-icon class="side-bar-icon">person</mat-icon>
+    <mat-icon class="side-bar-icon" (click)="personClick()">person</mat-icon>
     <mat-icon class="side-bar-icon" (click)="dashboardClick()">grid_view</mat-icon>
     <mat-icon class="side-bar-icon" (click)="devicesClick()">settings_remote</mat-icon>
 </div>
