--- a/water-it/src/app/components/manage-devices-components/manage-devices-page/manage-devices-page.component.html
+++ b/water-it/src/app/components/manage-devices-components/manage-devices-page/manage-devices-page.component.html
@@ -1,3 +1,9 @@
-<div class="fields-map-container">
-    <app-fields-map></app-fields-map>
+<div class="devices-page">
+    <div class="fields-map-container">
+        <app-fields-map></app-fields-map>
+    </div>
+    <div class="buttons-container">
+        <button mat-raised-button (click)="openDialog(0)">Add field</button> 
+        <button mat-raised-button (click)="openDialog(1)">Add device</button> 
+    </div>  
 </div>
