--- a/water-it/src/app/components/management-components/top-navbar/top-navbar.component.html
+++ b/water-it/src/app/components/management-components/top-navbar/top-navbar.component.html
@@ -3,15 +3,14 @@
         <img class="logo" src="../../../../assets/Logo/logo-navbar.jpg" alt="">
     </div>
     <div class="navbar-content">
-        <p class="user-name">Jan Kowalski</p>
+        <p class="user-name">{{this.username}}</p>
         <div class="top-bar-icon">
-            <mat-icon class="top-bar-icon-notification">notifications</mat-icon>
+            <mat-icon class="top-bar-icon-notification">not</mat-icon>
             <div class="notification-number-container">
                 <p class="number-of-notifications">20</p>
             </div>
         </div>
-        
-        <mat-icon class="top-bar-icon">settings</mat-icon>
-        
+        <mat-icon class="top-bar-icon">set</mat-icon>
+        <button class="log-out-button" (click)="logOutButtonClick()">Log Out</button>
     </div>
 </div>
