--- a/water-it/src/app/components/dashboard-components/sensors-preview-components/rain-preview/rain-preview.component.html
+++ b/water-it/src/app/components/dashboard-components/sensors-preview-components/rain-preview/rain-preview.component.html
@@ -1,3 +1,6 @@
 <div class="rain-preview-chart-container">
-    <p>{{ data.rainfall | rain }}</p>
+    <div class="icon-container">
+        <img src="../.././../../../assets/Images/rainfall-icon.png" alt="">
+    </div>
+    <p><b>{{ data.rainfall | rain }}</b></p>
 </div>
