--- a/water-it/src/app/components/manage-devices-components/manage-devices-page/manage-devices-page.component.html
+++ b/water-it/src/app/components/manage-devices-components/manage-devices-page/manage-devices-page.component.html
@@ -1,3 +1,15 @@
-<div class="fields-map-container">
-    <app-fields-map></app-fields-map>
+<div class="manage-devices-content-container">
+    <div class="manage-devices-content">
+        <div class="left-side-content">
+            <div class="header">
+                <p class="title">DEVICES</p>
+            </div>
+            <div class="devices-list">
+                
+            </div>
+        </div>
+        <div class="fields-map-container">
+            <app-fields-map></app-fields-map>
+        </div> 
+    </div>
 </div>
