--- a/water-it/src/app/components/dashboard-components/sensors-preview-components/rain-preview/rain-preview.component.css
+++ b/water-it/src/app/components/dashboard-components/sensors-preview-components/rain-preview/rain-preview.component.css
@@ -12,3 +12,17 @@
     color: #008FFB;
     font-size: 13pt;
 }
+
+.icon-container {
+    height: 10vh;
+}
+
+img {
+    width: 100%;
+    height: 100%;
+}
+
+p {
+    text-align: center;
+    color: #008FFB;
+}
