--- a/water-it/src/app/components/management-components/top-navbar/top-navbar.component.html
+++ b/water-it/src/app/components/management-components/top-navbar/top-navbar.component.html
@@ -5,12 +5,12 @@
     <div class="navbar-content">
         <p class="user-name">{{this.username}}</p>
         <div class="top-bar-icon">
-            <mat-icon class="top-bar-icon-notification">not</mat-icon>
+            <mat-icon class="top-bar-icon-notification">notifications</mat-icon>
             <div class="notification-number-container">
                 <p class="number-of-notifications">20</p>
             </div>
         </div>
-        <mat-icon class="top-bar-icon">set</mat-icon>
+        <mat-icon class="top-bar-icon">settings</mat-icon>
         <button class="log-out-button" (click)="logOutButtonClick()">Log Out</button>
     </div>
 </div>
