--- a/water-it/src/app/components/dashboard-components/dashboard-page/dashboard-page.component.css
+++ b/water-it/src/app/components/dashboard-components/dashboard-page/dashboard-page.component.css
@@ -31,7 +31,8 @@ div.weather-forecast-componet-container {
 div.prediction-component-container {
     width: 18vw;
     height: 22vh;
-    background-color: white;
+    background-color: #33B9DE;
+    color: white;
     border-radius: 20px;
     display: flex;
     justify-content: center;
