--- a/water-it/src/app/components/dashboard-components/water-requirement-prediction/water-requirement-prediction.component.html
+++ b/water-it/src/app/components/dashboard-components/water-requirement-prediction/water-requirement-prediction.component.html
@@ -1,3 +1,3 @@
-<div class="prediction-container">
-    TODO water prediction 
+<div class="prediction-container" *ngIf="prediction$ | async as prediction">
+    {{prediction.waterRequireAmount}}
 </div>
