--- a/water-it/src/app/components/manage-devices-components/field-form/field-form.component.css
+++ b/water-it/src/app/components/manage-devices-components/field-form/field-form.component.css
@@ -19,7 +19,7 @@ div.field-form-container{
     border-radius: 20px;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: center;
 }
 
@@ -86,6 +86,7 @@ button{
     cursor: pointer;
     margin-left: 1vw;
     margin-right: 1vw;
+    margin-top: 4vh;
     font-family: "Sofia", sans-serif;
 }
 
