--- a/water-it/src/app/components/manage-devices-components/fields-map/fields-map.component.html
+++ b/water-it/src/app/components/manage-devices-components/fields-map/fields-map.component.html
@@ -1,4 +1,5 @@
 <div class="map-container"
      leaflet 
-     [leafletOptions]="options">
+     [leafletOptions]="options"
+     (leafletMapReady)="onMapReady($event)">
 </div>
