--- a/water-it/src/app/components/manage-devices-components/manage-devices-page/manage-devices-page.component.html
+++ b/water-it/src/app/components/manage-devices-components/manage-devices-page/manage-devices-page.component.html
@@ -7,24 +7,12 @@
                 <button (click)="openDialog()">+</button>
             </div>
             <div class="fields-list" *ngIf="userFields$ | async as fields">
-                <app-fields-list-item *ngFor="let field of fields" 
+                <app-fields-list-item *ngFor="let field of fields"
                      [data]="field"
-                     [selectedFieldId]="this.selectedFieldId"
+                     [selectedFieldId]="selectedFieldId$ | async"
                      (selectField)="selectField($event)">
                 </app-fields-list-item>
             </div>
-
-            <app-fields-list-item 
-                [data]="testField0"
-                [selectedFieldId]="this.selectedFieldId"
-                (selectField)="selectField($event)">
-            </app-fields-list-item>
-            <app-fields-list-item 
-                [data]="testField1"
-                [selectedFieldId]="this.selectedFieldId"
-                (selectField)="selectField($event)">
-            </app-fields-list-item>
-
         </div>
         <div class="fields-map-container">
             <app-fields-map></app-fields-map>
