fixed measurements and prediction

--- a/water-it/src/app/components/dashboard-components/sensors-preview-components/rain-preview/rain-preview.component.html
+++ b/water-it/src/app/components/dashboard-components/sensors-preview-components/rain-preview/rain-preview.component.html
@@ -2,5 +2,5 @@
     <div class="icon-container">
         <img src="../.././../../../assets/Images/rainfall-icon.png" alt="">
     </div>
-    <p><b>{{ data.rainfall | rain }}</b></p>
+    <p><b>{{ data?.rainfall | rain }}</b></p>
 </div>
