--- a/water-it/src/app/components/dashboard-components/dashboard-page/dashboard-page.component.css
+++ b/water-it/src/app/components/dashboard-components/dashboard-page/dashboard-page.component.css
@@ -37,6 +37,7 @@ div.prediction-component-container {
     display: flex;
     justify-content: center;
     align-items: center;
+    overflow: hidden;
 }
 
 div.dashboard-container {
